--- a/Jupyter notebook/Keras-ResNet34(Ravdess-Frequenzbereich).ipynb
+++ b/Jupyter notebook/Keras-ResNet34(Ravdess-Frequenzbereich).ipynb
@@ -1,6 +1,52 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "47cc2e12",
+   "metadata": {},
+   "source": [
+    "# Die Stimmungserkennung (SER)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75d40c2e",
+   "metadata": {},
+   "source": [
+    "## Inhalt\n",
+    "\n",
+    "* [Tensorboard](#Tensorboard)\n",
+    "* [Python-Bibliotheken](#Bibliotheken)\n",
+    "* [Die Vorverarbeitung](#Vorverarbeitung)  \n",
+    "    * [Die Datenbeladung](#Datenbeladung)    \n",
+    "    * [Die Datenvisualisierung](#datenvisual)\n",
+    "* [Das Klassifikationsmodell](#klassifikationsmodell)\n",
+    "    * [Die Modellskonfiguration](#modelskonfiguration)\n",
+    "    * [Die Modellstruktur](#modellstruktur)\n",
+    "    * [Modell-Training](#modelltraining)\n",
+    "* [Save Modell](#savemodell)\n",
+    "* [Test Modell](#testmodell)\n",
+    "    * [Die Ganauigkeit](#ganauigkeit)\n",
+    "    * [Die Metriken](#metriken)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6d41b9b",
+   "metadata": {},
+   "source": [
+    "## Tensorboard<a class=\"anchor\" id=\"Tensorboard\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f70e689f",
+   "metadata": {},
+   "source": [
+    "#### Tensorboard ist eine Webanwendung zur Visualisierungverschidener Aspekte neuronaler Netze"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "nervous-authentication",
@@ -10,6 +56,14 @@
     "from keras.backend import clear_session\n",
     "clear_session()\n",
     "%reload_ext tensorboard"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70afc695",
+   "metadata": {},
+   "source": [
+    "## Python-Bibliotheken<a class=\"anchor\" id=\"Bibliotheken\"></a>"
    ]
   },
   {
@@ -41,6 +95,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8bc554bf",
+   "metadata": {},
+   "source": [
+    "## Die Vorverarbeitung<a class=\"anchor\" id=\"Vorverarbeitung\"></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "id": "ebdb2631",
@@ -58,6 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Audiodateien\n",
     "PATH_TO_RAVDESS = Path.cwd()/\"ravdess\"\n",
     "PATH_RAVDESS_TRAIN = PATH_TO_RAVDESS/\"train\"\n",
     "bs_train = 1440"
@@ -70,6 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Confusion Matrix\n",
     "class_names = [EMOTIONS[ind] for ind in range(len(EMOTIONS))]\n",
     "def plot_confusion_matrix(cm, classes,\n",
     "                          normalize=False,\n",
@@ -106,6 +170,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8e239d11",
+   "metadata": {},
+   "source": [
+    "### Die Datenbeladung<a class=\"anchor\" id=\"Datenbeladung\"></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "id": "challenging-verse",
@@ -134,17 +206,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "id": "proof-benchmark",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ravdess_train = PrecomputedRavdess(PATH_RAVDESS_TRAIN,\n",
+    "def loader(path):\n",
+    "    ravdess = PrecomputedRavdess(path,\n",
     "                                  img_transforms=transforms.Compose([\n",
     "                                     transforms.ToTensor(),\n",
     "                                     transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
     "                                                          std=[0.229, 0.224, 0.225])])\n",
-    ")"
+    "    )\n",
+    "    return ravdess"
    ]
   },
   {
@@ -154,8 +228,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ravdess_train = loader(PATH_RAVDESS_TRAIN)\n",
     "ravdess_train_loader = torch.utils.data.DataLoader(ravdess_train,bs_train, shuffle=True)\n",
     "spectogram = torch.utils.data.DataLoader(ravdess_train,64,shuffle=True )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e5c4f2e",
+   "metadata": {},
+   "source": [
+    "### Die Datenvisualisierung<a class=\"anchor\" id=\"#datenvisual\"></a>"
    ]
   },
   {
@@ -220,13 +303,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3980fa14",
+   "metadata": {},
+   "source": [
+    "## Das Klassifikationsmodell<a class=\"anchor\" id=\"#klassifikationsmodell\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2caa75f",
+   "metadata": {},
+   "source": [
+    "### Die Modellskonfiguration<a class=\"anchor\" id=\"#modelskonfiguration\"></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "id": "certain-mouse",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Modelskonfiguration\n",
     "batch_size = 64\n",
     "img_width, img_height, img_num_channels = 3,200,300\n",
     "loss_function = sparse_categorical_crossentropy\n",
@@ -243,6 +341,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Residual Unit-Schicht\n",
+    "# Im Konstruktor werden alle erforderlichen Schichten erzeugt\n",
     "DefaultConv2D = partial(keras.layers.Conv2D, kernel_size=3, strides=1,\n",
     "                        padding=\"SAME\", use_bias=False)\n",
     "\n",
@@ -279,6 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Das ResNet-34 kann mit einem Sequential-Modell angebaut werden.\n",
     "def build_model():\n",
     "    model = keras.models.Sequential()\n",
     "    model.add(DefaultConv2D(64, kernel_size=3, strides=1,\n",
@@ -307,8 +408,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Datentyp-Umwandelung\n",
     "images = (tf.cast(images, tf.float32) / 255).numpy()\n",
     "labels = labels.numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aba293a7",
+   "metadata": {},
+   "source": [
+    "### Die Modellstruktur<a class=\"anchor\" id=\"#modellstruktur\"></a>"
    ]
   },
   {
@@ -355,6 +465,14 @@
    "source": [
     "model = build_model()\n",
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1c2a1c5",
+   "metadata": {},
+   "source": [
+    "### Modell-Training<a class=\"anchor\" id=\"#modelltraining\"></a>"
    ]
   },
   {
@@ -479,13 +597,7 @@
       "15/15 [==============================] - 7s 468ms/step - loss: 5.6962e-04 - accuracy: 1.0000 - val_loss: 1.7432 - val_accuracy: 0.5837\n",
       "Epoch 56/100\n",
       "15/15 [==============================] - 7s 466ms/step - loss: 5.5497e-04 - accuracy: 1.0000 - val_loss: 1.5982 - val_accuracy: 0.6052\n",
-      "Epoch 57/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 57/100\n",
       "15/15 [==============================] - 7s 466ms/step - loss: 5.2119e-04 - accuracy: 1.0000 - val_loss: 1.5638 - val_accuracy: 0.6094\n",
       "Epoch 58/100\n",
       "15/15 [==============================] - 7s 466ms/step - loss: 5.3025e-04 - accuracy: 1.0000 - val_loss: 1.5160 - val_accuracy: 0.6223\n",
@@ -585,6 +697,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4a731a9f",
+   "metadata": {},
+   "source": [
+    "#### Die Genauigkeit"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "id": "authorized-harrison",
@@ -602,6 +722,14 @@
    "source": [
     "loss, acc = model.evaluate(images, labels)\n",
     "print(\"Train, accuracy: {:5.2f}%\".format(100*acc))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cbbf2c9",
+   "metadata": {},
+   "source": [
+    "#### Die Metriken"
    ]
   },
   {
@@ -656,6 +784,14 @@
     "plt.figure()\n",
     "plot_confusion_matrix(confusion_matrix(labels, y_pred_b), classes=class_names)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77d71c40",
+   "metadata": {},
+   "source": [
+    "#### Visualisierung"
    ]
   },
   {
@@ -749,7 +885,7 @@
    "id": "russian-comment",
    "metadata": {},
    "source": [
-    "## Save Modell"
+    "## Save Modell<a class=\"anchor\" id=\"#savemodell\"></a>"
    ]
   },
   {
@@ -767,7 +903,7 @@
    "id": "flush-offense",
    "metadata": {},
    "source": [
-    "## Test Modell"
+    "## Test Modell<a class=\"anchor\" id=\"#testmodell\"></a>"
    ]
   },
   {
@@ -788,12 +924,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ravdess_test = PrecomputedRavdess(PATH_RAVDESS_TEST,\n",
-    "                                  img_transforms=transforms.Compose([\n",
-    "                                      transforms.ToTensor(),\n",
-    "                                     transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
-    "                                                          std=[0.229, 0.224, 0.225])])\n",
-    ")\n",
+    "ravdess_test = loader(PATH_RAVDESS_TEST)\n",
     "ravdess_test_loader = torch.utils.data.DataLoader(ravdess_test,bs_test, shuffle=True)\n",
     "images_test, labels_test = next(iter(ravdess_test_loader))  "
    ]
@@ -842,6 +973,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5bf18abd",
+   "metadata": {},
+   "source": [
+    "### Die Ganauigkeit<a class=\"anchor\" id=\"#ganauigkeit\"></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
    "id": "fleet-detector",
@@ -859,6 +998,14 @@
    "source": [
     "loss, acc = model_test.evaluate(images_test, labels_test)\n",
     "print('Restored model, accuracy: {:5.2f}%'.format(100 * acc))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9829fe3b",
+   "metadata": {},
+   "source": [
+    "### Die Metriken<a class=\"anchor\" id=\"#metriken\"></a>"
    ]
   },
   {
@@ -908,7 +1055,6 @@
     "y_pred_bool = np.argmax(y_pred, axis=1)\n",
     "\n",
     "print(classification_report(labels_test, y_pred_bool))\n",
-    "\n",
     "\n",
     "# Plot non-normalized confusion matrix\n",
     "plt.figure()\n",
